
2.5-SNAPSHOT (release planned for 2014-03-31)

-Dutch:
    -remove a hack from the word tokenizer code

-English:
    -added a new rule to handle corrections of mistakes in standard
     English contractions (wasnt, didnt)
    -changed word tokenization so that the hyphen at the end of a
     word is no longer its part
    -removed spelling replacement pairs that made LT work very slowly

-Portuguese:
    -added several rules
    -added dozens of compounds: it now has 3400+ compound words
    
-Russian:
    -added a few rules
    

-added common punctuation and mathematical characters (=#*∗×·+÷) to the 
set of tokenizing characters in most languages

2.4.1 (2014-01-08)

	-updated Morfologik libraries to 1.8.3 to fix slow suggestions
	 in the spell checker, which affected at least en-US


2.4 (2013-12-30)

-Breton:
	-SRX sentence tokenization
	-added/improved a few rules
	-fixed some false alarms
	-fixed incorrect suggestions thanks to added tests on corrections

-Catalan:
	-added/improved several rules
	-fixed false alarms
	-made additions and fixes to the tagger dictionary
	-removed some words from synthesis dictionary (see filter-archaic.txt)
	-added frequency data to the tagger dictionary; frequency wordlist comes from the Gaia 
	 project, with Apache License, version 2.0
	 (https://github.com/mozilla-b2g/gaia/tree/master/keyboard/dictionaries).

-English:
	-added/improved a few rules
	-fixed some false alarms

-French:
	-added/improved several rules
	-fixed some false alarms

-German:
	-added/improved several rules
	-added a synthesizer - the agreement rule can now make suggestions
	 for some errors (not all suggestions are correct, though)

-Polish:
	-added/improved several rules, especially for hyphen and dash usage
	-added frequency information for spell-checking dictionary; 
	 frequency wordlist comes from the Gaia project, with Apache License, 
	 version 2.0
	 (https://github.com/mozilla-b2g/gaia/tree/master/keyboard/dictionaries).