@@ -11,10 +11,19 @@ LanguageTool Change Log
     -changed word tokenization so that the hyphen at the end of a
      word is no longer its part
     -removed spelling replacement pairs that made LT work very slowly
+    -fixed a number of false alarms
+    -added some new rules to handle common contextual misspellings and
+     redundant phrases 
 
+-Polish:
+	-cleaned up spelling rules and hyphenation rules, added some frequent
+	 misspellings to generate proper suggestions
+	-changed word tokenization so that the hyphen at the end of a
+     word is no longer its part
+     
 -Portuguese:
     -added several rules
-    -added dozens of compounds: it now has 3400+ compound words
+    -added dozens of compounds: it now has 3400+ compound words    
     
 -Russian:
     -added a few rules
